// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Auth Template Generated authstack template in default flow 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ShouldNotCreateEnvResources": {
      "Fn::Equals": [
        {
          "Ref": "env",
        },
        "NONE",
      ],
    },
    "ShouldOutputAppClientSecrets": {
      "Fn::Equals": [
        {
          "Ref": "userpoolClientGenerateSecret",
        },
        true,
      ],
    },
  },
  "Description": "Amplify Cognito Stack for AWS Amplify CLI",
  "Outputs": {
    "AppClientID": {
      "Description": "The user pool app client id",
      "Value": {
        "Ref": "UserPoolClient",
      },
    },
    "AppClientIDWeb": {
      "Description": "The user pool app client id for web",
      "Value": {
        "Ref": "UserPoolClientWeb",
      },
    },
    "AppClientSecret": {
      "Condition": "ShouldOutputAppClientSecrets",
      "Value": {
        "Fn::GetAtt": [
          "UserPoolClientInputs",
          "appSecret",
        ],
      },
    },
    "IdentityPoolId": {
      "Description": "Id for the identity pool",
      "Value": {
        "Ref": "IdentityPool",
      },
    },
    "IdentityPoolName": {
      "Value": {
        "Fn::GetAtt": [
          "IdentityPool",
          "Name",
        ],
      },
    },
    "UserPoolArn": {
      "Description": "Arn for the user pool",
      "Value": {
        "Fn::GetAtt": [
          "UserPool",
          "Arn",
        ],
      },
    },
    "UserPoolId": {
      "Description": "Id for the user pool",
      "Value": {
        "Ref": "UserPool",
      },
    },
    "UserPoolName": {
      "Value": {
        "Ref": "userPoolName",
      },
    },
  },
  "Parameters": {
    "aliasAttributes": {
      "Type": "CommaDelimitedList",
    },
    "allowUnauthenticatedIdentities": {
      "Type": "String",
    },
    "authRoleArn": {
      "Type": "String",
    },
    "authSelections": {
      "Type": "String",
    },
    "autoVerifiedAttributes": {
      "Type": "CommaDelimitedList",
    },
    "breakCircularDependency": {
      "Type": "String",
    },
    "defaultPasswordPolicy": {
      "Type": "String",
    },
    "dependsOn": {
      "Type": "CommaDelimitedList",
    },
    "emailVerificationMessage": {
      "Type": "String",
    },
    "emailVerificationSubject": {
      "Type": "String",
    },
    "env": {
      "Type": "String",
    },
    "identityPoolName": {
      "Type": "String",
    },
    "mfaConfiguration": {
      "Type": "String",
    },
    "mfaTypes": {
      "Type": "CommaDelimitedList",
    },
    "passwordPolicyCharacters": {
      "Type": "CommaDelimitedList",
    },
    "passwordPolicyMinLength": {
      "Type": "String",
    },
    "requiredAttributes": {
      "Type": "CommaDelimitedList",
    },
    "resourceName": {
      "Type": "String",
    },
    "resourceNameTruncated": {
      "Type": "String",
    },
    "serviceName": {
      "Type": "String",
    },
    "sharedId": {
      "Type": "String",
    },
    "smsAuthenticationMessage": {
      "Type": "String",
    },
    "smsVerificationMessage": {
      "Type": "String",
    },
    "unauthRoleArn": {
      "Type": "String",
    },
    "useDefault": {
      "Type": "String",
    },
    "useEnabledMfas": {
      "Type": "String",
    },
    "userPoolGroupList": {
      "Type": "CommaDelimitedList",
    },
    "userPoolName": {
      "Type": "String",
    },
    "usernameCaseSensitive": {
      "Type": "String",
    },
    "userpoolClientGenerateSecret": {
      "Type": "String",
    },
    "userpoolClientLambdaRole": {
      "Type": "String",
    },
    "userpoolClientReadAttributes": {
      "Type": "CommaDelimitedList",
    },
    "userpoolClientRefreshTokenValidity": {
      "Type": "String",
    },
    "userpoolClientSetAttributes": {
      "Type": "String",
    },
    "userpoolClientWriteAttributes": {
      "Type": "CommaDelimitedList",
    },
  },
  "Resources": {
    "IdentityPool": {
      "DependsOn": [
        "UserPoolClientInputs",
      ],
      "Properties": {
        "AllowUnauthenticatedIdentities": {
          "Ref": "allowUnauthenticatedIdentities",
        },
        "CognitoIdentityProviders": [
          {
            "ClientId": {
              "Ref": "UserPoolClient",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
          {
            "ClientId": {
              "Ref": "UserPoolClientWeb",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
        ],
        "IdentityPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "authdefaultsettings2c33facd_identitypool_2c33facd",
            {
              "Fn::Join": [
                "",
                [
                  "authdefaultsettings2c33facd_identitypool_2c33facd__",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "IdentityPoolRoleMap": {
      "DependsOn": [
        "IdentityPool",
      ],
      "Properties": {
        "IdentityPoolId": {
          "Ref": "IdentityPool",
        },
        "Roles": {
          "authenticated": {
            "Ref": "authRoleArn",
          },
          "unauthenticated": {
            "Ref": "unauthRoleArn",
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "UserPool": {
      "Properties": {
        "AliasAttributes": {
          "Ref": "aliasAttributes",
        },
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": {
          "Ref": "emailVerificationMessage",
        },
        "EmailVerificationSubject": {
          "Ref": "emailVerificationSubject",
        },
        "MfaConfiguration": {
          "Ref": "mfaConfiguration",
        },
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": {
              "Ref": "passwordPolicyMinLength",
            },
            "RequireLowercase": false,
            "RequireNumbers": false,
            "RequireSymbols": false,
            "RequireUppercase": false,
          },
        },
        "Schema": [
          {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
        ],
        "UserAttributeUpdateSettings": {
          "AttributesRequireVerificationBeforeUpdate": [
            "email",
          ],
        },
        "UserPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userPoolName",
            },
            {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "userPoolName",
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "UsernameConfiguration": {
          "CaseSensitive": false,
        },
      },
      "Type": "AWS::Cognito::UserPool",
    },
    "UserPoolClient": {
      "DependsOn": [
        "UserPool",
      ],
      "Properties": {
        "ClientName": "authde2c33facd_app_client",
        "GenerateSecret": {
          "Ref": "userpoolClientGenerateSecret",
        },
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "UserPoolClientInputs": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "UserPoolClientLogPolicy",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "UserPoolClientLambda",
            "Arn",
          ],
        },
        "clientId": {
          "Ref": "UserPoolClient",
        },
        "userpoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "UserPoolClientLambda": {
      "DependsOn": [
        "UserPoolClientRole",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
const identity = new aws.CognitoIdentityServiceProvider();
exports.handler = (event, context, callback) => {
  if (event.RequestType == 'Delete') {
    response.send(event, context, response.SUCCESS, {});
  }
  if (event.RequestType == 'Update' || event.RequestType == 'Create') {
    const params = {
      ClientId: event.ResourceProperties.clientId,
      UserPoolId: event.ResourceProperties.userpoolId,
    };
    identity
      .describeUserPoolClient(params)
      .promise()
      .then((res) => {
        response.send(event, context, response.SUCCESS, { appSecret: res.UserPoolClient.ClientSecret });
      })
      .catch((err) => {
        response.send(event, context, response.FAILED, { err });
      });
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UserPoolClientRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "UserPoolClientLambdaPolicy": {
      "DependsOn": [
        "UserPoolClientLambda",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "cognito-idp:DescribeUserPoolClient",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "UserPool",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "authde2c33facd_userpoolclient_lambda_iam_policy",
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "UserPoolClientLogPolicy": {
      "DependsOn": [
        "UserPoolClientLambdaPolicy",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${region}:\${account}:log-group:/aws/lambda/\${lambda}:log-stream:*",
                  {
                    "account": {
                      "Ref": "AWS::AccountId",
                    },
                    "lambda": {
                      "Ref": "UserPoolClientLambda",
                    },
                    "region": {
                      "Ref": "AWS::Region",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "authde2c33facd_userpoolclient_lambda_log_policy",
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "UserPoolClientRole": {
      "DependsOn": [
        "UserPoolClient",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userpoolClientLambdaRole",
            },
            {
              "Fn::Join": [
                "",
                [
                  "upClientLambdaRole2c33facd",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          "-",
                          {
                            "Ref": "AWS::StackName",
                          },
                        ],
                      },
                    ],
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPoolClientWeb": {
      "DependsOn": [
        "UserPool",
      ],
      "Properties": {
        "ClientName": "authde2c33facd_app_clientWeb",
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
}
`;

exports[`Check Auth Template Generated authstack template in manual flow 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ShouldNotCreateEnvResources": {
      "Fn::Equals": [
        {
          "Ref": "env",
        },
        "NONE",
      ],
    },
    "ShouldOutputAppClientSecrets": {
      "Fn::Equals": [
        {
          "Ref": "userpoolClientGenerateSecret",
        },
        true,
      ],
    },
  },
  "Description": "Amplify Cognito Stack for AWS Amplify CLI",
  "Outputs": {
    "AmazonWebClient": {
      "Value": {
        "Ref": "amazonAppId",
      },
    },
    "AppClientID": {
      "Description": "The user pool app client id",
      "Value": {
        "Ref": "UserPoolClient",
      },
    },
    "AppClientIDWeb": {
      "Description": "The user pool app client id for web",
      "Value": {
        "Ref": "UserPoolClientWeb",
      },
    },
    "AppClientSecret": {
      "Condition": "ShouldOutputAppClientSecrets",
      "Value": {
        "Fn::GetAtt": [
          "UserPoolClientInputs",
          "appSecret",
        ],
      },
    },
    "AppleWebClient": {
      "Value": {
        "Ref": "appleAppId",
      },
    },
    "CreatedSNSRole": {
      "Description": "role arn",
      "Value": {
        "Fn::GetAtt": [
          "SNSRole",
          "Arn",
        ],
      },
    },
    "FacebookWebClient": {
      "Value": {
        "Ref": "facebookAppId",
      },
    },
    "GoogleWebClient": {
      "Value": {
        "Ref": "googleClientId",
      },
    },
    "HostedUIDomain": {
      "Value": {
        "Fn::If": [
          "ShouldNotCreateEnvResources",
          {
            "Ref": "hostedUIDomainName",
          },
          {
            "Fn::Join": [
              "-",
              [
                {
                  "Ref": "hostedUIDomainName",
                },
                {
                  "Ref": "env",
                },
              ],
            ],
          },
        ],
      },
    },
    "IdentityPoolId": {
      "Description": "Id for the identity pool",
      "Value": {
        "Ref": "IdentityPool",
      },
    },
    "IdentityPoolName": {
      "Value": {
        "Fn::GetAtt": [
          "IdentityPool",
          "Name",
        ],
      },
    },
    "OAuthMetadata": {
      "Value": {
        "Ref": "oAuthMetadata",
      },
    },
    "UserPoolArn": {
      "Description": "Arn for the user pool",
      "Value": {
        "Fn::GetAtt": [
          "UserPool",
          "Arn",
        ],
      },
    },
    "UserPoolId": {
      "Description": "Id for the user pool",
      "Value": {
        "Ref": "UserPool",
      },
    },
    "UserPoolName": {
      "Value": {
        "Ref": "userPoolName",
      },
    },
  },
  "Parameters": {
    "AllowedOAuthFlows": {
      "Type": "String",
    },
    "AllowedOAuthScopes": {
      "Type": "CommaDelimitedList",
    },
    "adminQueries": {
      "Type": "String",
    },
    "allowUnauthenticatedIdentities": {
      "Type": "String",
    },
    "amazonAppId": {
      "Type": "String",
    },
    "appleAppId": {
      "Type": "String",
    },
    "authProviders": {
      "Type": "CommaDelimitedList",
    },
    "authProvidersUserPool": {
      "Type": "CommaDelimitedList",
    },
    "authRoleArn": {
      "Type": "String",
    },
    "authSelections": {
      "Type": "String",
    },
    "authTriggerConnections": {
      "Type": "CommaDelimitedList",
    },
    "autoVerifiedAttributes": {
      "Type": "CommaDelimitedList",
    },
    "breakCircularDependency": {
      "Type": "String",
    },
    "defaultPasswordPolicy": {
      "Type": "String",
    },
    "emailVerificationMessage": {
      "Type": "String",
    },
    "emailVerificationSubject": {
      "Type": "String",
    },
    "env": {
      "Type": "String",
    },
    "facebookAppId": {
      "Type": "String",
    },
    "facebookAppIdUserPool": {
      "Type": "String",
    },
    "facebookAppSecretUserPool": {
      "Type": "String",
    },
    "googleAppIdUserPool": {
      "Type": "String",
    },
    "googleAppSecretUserPool": {
      "Type": "String",
    },
    "googleClientId": {
      "Type": "String",
    },
    "hostedUI": {
      "Type": "String",
    },
    "hostedUIDomainName": {
      "Type": "String",
    },
    "hostedUIProviderCreds": {
      "NoEcho": true,
      "Type": "String",
    },
    "hostedUIProviderMeta": {
      "Type": "String",
    },
    "identityPoolName": {
      "Type": "String",
    },
    "loginwithamazonAppIdUserPool": {
      "Type": "String",
    },
    "loginwithamazonAppSecretUserPool": {
      "Type": "String",
    },
    "mfaConfiguration": {
      "Type": "String",
    },
    "mfaTypes": {
      "Type": "CommaDelimitedList",
    },
    "newCallbackURLs": {
      "Type": "CommaDelimitedList",
    },
    "newLogoutURLs": {
      "Type": "CommaDelimitedList",
    },
    "oAuthMetadata": {
      "Type": "String",
    },
    "passwordPolicyCharacters": {
      "Type": "CommaDelimitedList",
    },
    "passwordPolicyMinLength": {
      "Type": "String",
    },
    "permissions": {
      "Type": "CommaDelimitedList",
    },
    "requiredAttributes": {
      "Type": "CommaDelimitedList",
    },
    "resourceName": {
      "Type": "String",
    },
    "resourceNameTruncated": {
      "Type": "String",
    },
    "selectedParties": {
      "Type": "String",
    },
    "serviceName": {
      "Type": "String",
    },
    "sharedId": {
      "Type": "String",
    },
    "signinwithappleClientIdUserPool": {
      "Type": "String",
    },
    "signinwithappleKeyIdUserPool": {
      "Type": "String",
    },
    "signinwithapplePrivateKeyUserPool": {
      "Type": "String",
    },
    "signinwithappleTeamIdUserPool": {
      "Type": "String",
    },
    "smsAuthenticationMessage": {
      "Type": "String",
    },
    "smsVerificationMessage": {
      "Type": "String",
    },
    "thirdPartyAuth": {
      "Type": "String",
    },
    "triggers": {
      "Type": "String",
    },
    "unauthRoleArn": {
      "Type": "String",
    },
    "useDefault": {
      "Type": "String",
    },
    "useEnabledMfas": {
      "Type": "String",
    },
    "userPoolGroups": {
      "Type": "String",
    },
    "userPoolName": {
      "Type": "String",
    },
    "usernameCaseSensitive": {
      "Type": "String",
    },
    "userpoolClientGenerateSecret": {
      "Type": "String",
    },
    "userpoolClientLambdaRole": {
      "Type": "String",
    },
    "userpoolClientReadAttributes": {
      "Type": "CommaDelimitedList",
    },
    "userpoolClientRefreshTokenValidity": {
      "Type": "String",
    },
    "userpoolClientSetAttributes": {
      "Type": "String",
    },
    "userpoolClientWriteAttributes": {
      "Type": "CommaDelimitedList",
    },
    "verificationBucketName": {
      "Type": "String",
    },
  },
  "Resources": {
    "CustomMessageConfirmationBucket": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AccessControl": "Private",
        "BucketName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "verificationBucketName",
            },
            {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "verificationBucketName",
                  },
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "CorsConfiguration": {
          "CorsRules": [
            {
              "AllowedHeaders": [
                "Authorization",
                "Content-length",
              ],
              "AllowedMethods": [
                "GET",
              ],
              "AllowedOrigins": [
                "*",
              ],
              "MaxAge": 3000,
            },
          ],
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "HostedUICustomResource": {
      "DependsOn": [
        "UserPoolClientRole",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
const identity = new aws.CognitoIdentityServiceProvider();
exports.handler = (event, context, callback) => {
  const userPoolId = event.ResourceProperties.userPoolId;
  const inputDomainName = event.ResourceProperties.hostedUIDomainName;
  let deleteUserPoolDomain = (domainName) => {
    let params = { Domain: domainName, UserPoolId: userPoolId };
    return identity.deleteUserPoolDomain(params).promise();
  };
  if (event.RequestType == 'Delete') {
    deleteUserPoolDomain(inputDomainName)
      .then(() => {
        response.send(event, context, response.SUCCESS, {});
      })
      .catch((err) => {
        console.log(err);
        response.send(event, context, response.FAILED, { err });
      });
  }
  if (event.RequestType == 'Update' || event.RequestType == 'Create') {
    let checkDomainAvailability = (domainName) => {
      let params = { Domain: domainName };
      return identity
        .describeUserPoolDomain(params)
        .promise()
        .then((res) => {
          if (res.DomainDescription && res.DomainDescription.UserPool) {
            return false;
          }
          return true;
        })
        .catch((err) => {
          return false;
        });
    };
    let createUserPoolDomain = (domainName) => {
      let params = { Domain: domainName, UserPoolId: userPoolId };
      return identity.createUserPoolDomain(params).promise();
    };
    identity
      .describeUserPool({ UserPoolId: userPoolId })
      .promise()
      .then((result) => {
        if (inputDomainName) {
          if (result.UserPool.Domain === inputDomainName) {
            return;
          } else {
            if (!result.UserPool.Domain) {
              return checkDomainAvailability(inputDomainName).then((isDomainAvailable) => {
                if (isDomainAvailable) {
                  return createUserPoolDomain(inputDomainName);
                } else {
                  throw new Error('Domain not available');
                }
              });
            } else {
              return checkDomainAvailability(inputDomainName).then((isDomainAvailable) => {
                if (isDomainAvailable) {
                  return deleteUserPoolDomain(result.UserPool.Domain).then(() => createUserPoolDomain(inputDomainName));
                } else {
                  throw new Error('Domain not available');
                }
              });
            }
          }
        } else {
          if (result.UserPool.Domain) {
            return deleteUserPoolDomain(result.UserPool.Domain);
          }
        }
      })
      .then(() => {
        response.send(event, context, response.SUCCESS, {});
      })
      .catch((err) => {
        console.log(err);
        response.send(event, context, response.FAILED, { err });
      });
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UserPoolClientRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "HostedUICustomResourceInputs": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "HostedUICustomResourceLogPolicy",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "HostedUICustomResource",
            "Arn",
          ],
        },
        "hostedUIDomainName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "hostedUIDomainName",
            },
            {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "hostedUIDomainName",
                  },
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "userPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "HostedUICustomResourceLogPolicy": {
      "DependsOn": [
        "HostedUICustomResourcePolicy",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${region}:\${account}:log-group:/aws/lambda/\${lambda}:log-stream:*",
                  {
                    "account": {
                      "Ref": "AWS::AccountId",
                    },
                    "lambda": {
                      "Ref": "HostedUICustomResource",
                    },
                    "region": {
                      "Ref": "AWS::Region",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "UserPool",
              },
              "hostedUILogPolicy",
            ],
          ],
        },
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "HostedUICustomResourcePolicy": {
      "DependsOn": [
        "HostedUICustomResource",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "cognito-idp:CreateUserPoolDomain",
                "cognito-idp:DescribeUserPool",
                "cognito-idp:DeleteUserPoolDomain",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "UserPool",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "cognito-idp:DescribeUserPoolDomain",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "UserPool",
              },
              {
                "Ref": "hostedUI",
              },
            ],
          ],
        },
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "HostedUIProvidersCustomResource": {
      "DependsOn": [
        "UserPoolClientRole",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
const identity = new aws.CognitoIdentityServiceProvider();
exports.handler = (event, context, callback) => {
  try {
    const userPoolId = event.ResourceProperties.userPoolId;
    let hostedUIProviderMeta = JSON.parse(event.ResourceProperties.hostedUIProviderMeta);
    let hostedUIProviderCreds = JSON.parse(event.ResourceProperties.hostedUIProviderCreds);
    if (hostedUIProviderCreds.length === 0) {
      response.send(event, context, response.SUCCESS, {});
    }
    if (event.RequestType == 'Delete') {
      response.send(event, context, response.SUCCESS, {});
    }
    if (event.RequestType == 'Update' || event.RequestType == 'Create') {
      let getRequestParams = (providerName) => {
        let providerMetaIndex = hostedUIProviderMeta.findIndex((provider) => provider.ProviderName === providerName);
        let providerMeta = hostedUIProviderMeta[providerMetaIndex];
        let providerCredsIndex = hostedUIProviderCreds.findIndex((provider) => provider.ProviderName === providerName);
        let providerCreds = hostedUIProviderCreds[providerCredsIndex];
        let requestParams = {
          ProviderName: providerMeta.ProviderName,
          UserPoolId: userPoolId,
          AttributeMapping: providerMeta.AttributeMapping,
        };
        if (providerMeta.ProviderName === 'SignInWithApple') {
          if (providerCreds.client_id && providerCreds.team_id && providerCreds.key_id && providerCreds.private_key) {
            requestParams.ProviderDetails = {
              client_id: providerCreds.client_id,
              team_id: providerCreds.team_id,
              key_id: providerCreds.key_id,
              private_key: providerCreds.private_key,
              authorize_scopes: providerMeta.authorize_scopes,
            };
          } else {
            requestParams = null;
          }
        } else {
          if (providerCreds.client_id && providerCreds.client_secret) {
            requestParams.ProviderDetails = {
              client_id: providerCreds.client_id,
              client_secret: providerCreds.client_secret,
              authorize_scopes: providerMeta.authorize_scopes,
            };
          } else {
            requestParams = null;
          }
        }
        return requestParams;
      };
      let createIdentityProvider = (providerName) => {
        let requestParams = getRequestParams(providerName);
        if (!requestParams) {
          return Promise.resolve();
        }
        requestParams.ProviderType = requestParams.ProviderName;
        return identity.createIdentityProvider(requestParams).promise();
      };
      let updateIdentityProvider = (providerName) => {
        let requestParams = getRequestParams(providerName);
        if (!requestParams) {
          return Promise.resolve();
        }
        return identity.updateIdentityProvider(requestParams).promise();
      };
      let deleteIdentityProvider = (providerName) => {
        let params = { ProviderName: providerName, UserPoolId: userPoolId };
        return identity.deleteIdentityProvider(params).promise();
      };
      let providerPromises = [];
      identity
        .listIdentityProviders({ UserPoolId: userPoolId, MaxResults: 60 })
        .promise()
        .then((result) => {
          console.log(result);
          let providerList = result.Providers.map((provider) => provider.ProviderName);
          let providerListInParameters = hostedUIProviderMeta.map((provider) => provider.ProviderName);
          hostedUIProviderMeta.forEach((providerMetadata) => {
            if (providerList.indexOf(providerMetadata.ProviderName) > -1) {
              providerPromises.push(updateIdentityProvider(providerMetadata.ProviderName));
            } else {
              providerPromises.push(createIdentityProvider(providerMetadata.ProviderName));
            }
          });
          providerList.forEach((provider) => {
            if (providerListInParameters.indexOf(provider) < 0) {
              providerPromises.push(deleteIdentityProvider(provider));
            }
          });
          return Promise.all(providerPromises);
        })
        .then(() => {
          response.send(event, context, response.SUCCESS, {});
        })
        .catch((err) => {
          console.log(err.stack);
          response.send(event, context, response.FAILED, { err });
        });
    }
  } catch (err) {
    console.log(err.stack);
    response.send(event, context, response.FAILED, { err });
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UserPoolClientRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "HostedUIProvidersCustomResourceInputs": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "HostedUIProvidersCustomResourceLogPolicy",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "HostedUIProvidersCustomResource",
            "Arn",
          ],
        },
        "hostedUIProviderCreds": {
          "Ref": "hostedUIProviderCreds",
        },
        "hostedUIProviderMeta": {
          "Ref": "hostedUIProviderMeta",
        },
        "userPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "HostedUIProvidersCustomResourceLogPolicy": {
      "DependsOn": [
        "HostedUIProvidersCustomResourcePolicy",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${region}:\${account}:log-group:/aws/lambda/\${lambda}:log-stream:*",
                  {
                    "account": {
                      "Ref": "AWS::AccountId",
                    },
                    "lambda": {
                      "Ref": "HostedUIProvidersCustomResource",
                    },
                    "region": {
                      "Ref": "AWS::Region",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "UserPool",
              },
              "hostedUIProviderLogPolicy",
            ],
          ],
        },
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "HostedUIProvidersCustomResourcePolicy": {
      "DependsOn": [
        "HostedUIProvidersCustomResource",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "cognito-idp:CreateIdentityProvider",
                "cognito-idp:UpdateIdentityProvider",
                "cognito-idp:ListIdentityProviders",
                "cognito-idp:DeleteIdentityProvider",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "UserPool",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "cognito-idp:DescribeUserPoolDomain",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "UserPool",
              },
              "hostedUIProvider",
            ],
          ],
        },
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "IdentityPool": {
      "DependsOn": [
        "UserPoolClientInputs",
      ],
      "Properties": {
        "AllowUnauthenticatedIdentities": {
          "Ref": "allowUnauthenticatedIdentities",
        },
        "CognitoIdentityProviders": [
          {
            "ClientId": {
              "Ref": "UserPoolClient",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
          {
            "ClientId": {
              "Ref": "UserPoolClientWeb",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
        ],
        "IdentityPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "extauth387063394_identitypool_87063394",
            {
              "Fn::Join": [
                "",
                [
                  "extauth387063394_identitypool_87063394__",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "SupportedLoginProviders": {
          "accounts.google.com": {
            "Ref": "googleClientId",
          },
          "appleid.apple.com": {
            "Ref": "appleAppId",
          },
          "graph.facebook.com": {
            "Ref": "facebookAppId",
          },
          "www.amazon.com": {
            "Ref": "amazonAppId",
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "IdentityPoolRoleMap": {
      "DependsOn": [
        "IdentityPool",
      ],
      "Properties": {
        "IdentityPoolId": {
          "Ref": "IdentityPool",
        },
        "Roles": {
          "authenticated": {
            "Ref": "authRoleArn",
          },
          "unauthenticated": {
            "Ref": "unauthRoleArn",
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "OAuthCustomResource": {
      "DependsOn": [
        "HostedUICustomResourceInputs",
        "HostedUIProvidersCustomResourceInputs",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
const identity = new aws.CognitoIdentityServiceProvider();
exports.handler = (event, context, callback) => {
  try {
    const userPoolId = event.ResourceProperties.userPoolId;
    let webClientId = event.ResourceProperties.webClientId;
    let nativeClientId = event.ResourceProperties.nativeClientId;
    let hostedUIProviderMeta = JSON.parse(event.ResourceProperties.hostedUIProviderMeta);
    let oAuthMetadata = JSON.parse(event.ResourceProperties.oAuthMetadata);
    let providerList = hostedUIProviderMeta.map((provider) => provider.ProviderName);
    providerList.push('COGNITO');
    if (event.RequestType == 'Delete') {
      response.send(event, context, response.SUCCESS, {});
    }
    if (event.RequestType == 'Update' || event.RequestType == 'Create') {
      let params = {
        UserPoolId: userPoolId,
        AllowedOAuthFlows: oAuthMetadata.AllowedOAuthFlows,
        AllowedOAuthFlowsUserPoolClient: true,
        AllowedOAuthScopes: oAuthMetadata.AllowedOAuthScopes,
        CallbackURLs: oAuthMetadata.CallbackURLs,
        LogoutURLs: oAuthMetadata.LogoutURLs,
        SupportedIdentityProviders: providerList,
      };
      console.log(params);
      let updateUserPoolClientPromises = [];
      params.ClientId = webClientId;
      updateUserPoolClientPromises.push(identity.updateUserPoolClient(params).promise());
      params.ClientId = nativeClientId;
      updateUserPoolClientPromises.push(identity.updateUserPoolClient(params).promise());
      Promise.all(updateUserPoolClientPromises)
        .then(() => {
          response.send(event, context, response.SUCCESS, {});
        })
        .catch((err) => {
          console.log(err.stack);
          response.send(event, context, response.FAILED, { err });
        });
    }
  } catch (err) {
    console.log(err.stack);
    response.send(event, context, response.FAILED, { err });
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UserPoolClientRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "OAuthCustomResourceInputs": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "OAuthCustomResourceLogPolicy",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "OAuthCustomResource",
            "Arn",
          ],
        },
        "hostedUIProviderMeta": {
          "Ref": "hostedUIProviderMeta",
        },
        "nativeClientId": {
          "Ref": "UserPoolClient",
        },
        "oAuthMetadata": {
          "Ref": "oAuthMetadata",
        },
        "userPoolId": {
          "Ref": "UserPool",
        },
        "webClientId": {
          "Ref": "UserPoolClientWeb",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "OAuthCustomResourceLogPolicy": {
      "DependsOn": [
        "OAuthCustomResourcePolicy",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${region}:\${account}:log-group:/aws/lambda/\${lambda}:log-stream:*",
                  {
                    "account": {
                      "Ref": "AWS::AccountId",
                    },
                    "lambda": {
                      "Ref": "OAuthCustomResource",
                    },
                    "region": {
                      "Ref": "AWS::Region",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "UserPool",
              },
              "OAuthLogPolicy",
            ],
          ],
        },
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "OAuthCustomResourcePolicy": {
      "DependsOn": [
        "OAuthCustomResource",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "cognito-idp:UpdateUserPoolClient",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "UserPool",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "UserPool",
              },
              "OAuth",
            ],
          ],
        },
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SNSRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Condition": {
                "StringEquals": {
                  "sts:ExternalId": "extaut87063394_role_external_id",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cognito-idp.amazonaws.com",
              },
              "Sid": "",
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "sns:Publish",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "extaut87063394-sns-policy",
          },
        ],
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "extaut87063394_sns-role",
            {
              "Fn::Join": [
                "",
                [
                  "sns87063394",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          "-",
                          {
                            "Ref": "AWS::StackName",
                          },
                        ],
                      },
                    ],
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPool": {
      "DependsOn": [
        "SNSRole",
      ],
      "Properties": {
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": {
          "Ref": "emailVerificationMessage",
        },
        "EmailVerificationSubject": {
          "Ref": "emailVerificationSubject",
        },
        "EnabledMfas": [
          "SMS_MFA",
          "SOFTWARE_TOKEN_MFA",
        ],
        "MfaConfiguration": {
          "Ref": "mfaConfiguration",
        },
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": {
              "Ref": "passwordPolicyMinLength",
            },
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
          },
        },
        "Schema": [
          {
            "Mutable": true,
            "Name": "address",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "birthdate",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "family_name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "middle_name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "gender",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "locale",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "given_name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "nickname",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "phone_number",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "preferred_username",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "picture",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "profile",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "updated_at",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "website",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "zoneinfo",
            "Required": true,
          },
        ],
        "SmsAuthenticationMessage": {
          "Ref": "smsAuthenticationMessage",
        },
        "SmsConfiguration": {
          "ExternalId": "extaut87063394_role_external_id",
          "SnsCallerArn": {
            "Fn::GetAtt": [
              "SNSRole",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": {
          "Ref": "smsVerificationMessage",
        },
        "UserAttributeUpdateSettings": {
          "AttributesRequireVerificationBeforeUpdate": [
            "email",
          ],
        },
        "UserPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userPoolName",
            },
            {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "userPoolName",
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "UsernameConfiguration": {
          "CaseSensitive": false,
        },
      },
      "Type": "AWS::Cognito::UserPool",
    },
    "UserPoolClient": {
      "DependsOn": [
        "UserPool",
      ],
      "Properties": {
        "ClientName": "extaut87063394_app_client",
        "GenerateSecret": {
          "Ref": "userpoolClientGenerateSecret",
        },
        "ReadAttributes": {
          "Ref": "userpoolClientReadAttributes",
        },
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
        "WriteAttributes": {
          "Ref": "userpoolClientWriteAttributes",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "UserPoolClientInputs": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "UserPoolClientLogPolicy",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "UserPoolClientLambda",
            "Arn",
          ],
        },
        "clientId": {
          "Ref": "UserPoolClient",
        },
        "userpoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "UserPoolClientLambda": {
      "DependsOn": [
        "UserPoolClientRole",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
const identity = new aws.CognitoIdentityServiceProvider();
exports.handler = (event, context, callback) => {
  if (event.RequestType == 'Delete') {
    response.send(event, context, response.SUCCESS, {});
  }
  if (event.RequestType == 'Update' || event.RequestType == 'Create') {
    const params = {
      ClientId: event.ResourceProperties.clientId,
      UserPoolId: event.ResourceProperties.userpoolId,
    };
    identity
      .describeUserPoolClient(params)
      .promise()
      .then((res) => {
        response.send(event, context, response.SUCCESS, { appSecret: res.UserPoolClient.ClientSecret });
      })
      .catch((err) => {
        response.send(event, context, response.FAILED, { err });
      });
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UserPoolClientRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "UserPoolClientLambdaPolicy": {
      "DependsOn": [
        "UserPoolClientLambda",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "cognito-idp:DescribeUserPoolClient",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "UserPool",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "extaut87063394_userpoolclient_lambda_iam_policy",
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "UserPoolClientLogPolicy": {
      "DependsOn": [
        "UserPoolClientLambdaPolicy",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${region}:\${account}:log-group:/aws/lambda/\${lambda}:log-stream:*",
                  {
                    "account": {
                      "Ref": "AWS::AccountId",
                    },
                    "lambda": {
                      "Ref": "UserPoolClientLambda",
                    },
                    "region": {
                      "Ref": "AWS::Region",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "extaut87063394_userpoolclient_lambda_log_policy",
        "Roles": [
          {
            "Ref": "UserPoolClientRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "UserPoolClientRole": {
      "DependsOn": [
        "UserPoolClient",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userpoolClientLambdaRole",
            },
            {
              "Fn::Join": [
                "",
                [
                  "upClientLambdaRole87063394",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          "-",
                          {
                            "Ref": "AWS::StackName",
                          },
                        ],
                      },
                    ],
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPoolClientWeb": {
      "DependsOn": [
        "UserPool",
      ],
      "Properties": {
        "ClientName": "extaut87063394_app_clientWeb",
        "ReadAttributes": {
          "Ref": "userpoolClientReadAttributes",
        },
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
        "WriteAttributes": {
          "Ref": "userpoolClientWriteAttributes",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
}
`;
